<resources>
    <string name="app_name">SSLTestProject</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login and sign up -->
    <string name="prompt_name">Your Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_dob">Date of Birth</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="txt_SignUp"><u>Create and Account</u></string>

    <string name="no_internet_connection_message">Please check your internet connection</string>
    <string name="error_message">Please enter correct email and password</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to Ad Input-->
    <string name="email">foobaar@gmail.com</string>
    <string name="logout">Log Out</string>
    <string name="add">Add</string>
    <string name="result">Show Result</string>
    <string name="ad_length_hint">Enter Ad length (seconds)</string>
    <string name="total_time">Enter the time slot</string>
    <string name="ad_number">Enter the no of ad to be shown</string>

</resources>
